--- a/msj-enviado.html
+++ b/msj-enviado.html
@@ -14,15 +14,34 @@
     <title>Envío de mensaje exitoso</title>
 </head>
 <body>
+      <!-- Sección del Menú  -->
+      <div class="tudo">
+        <section class="menu">
+            <header class="menu__header">
+                <img src="assets\vector.png">
+                <h3 class="menu__title">Marianela Cilene Gamarra</h3>
+            </header>
+            <nav>
+                <ul class="menu__list">
+                    <li class="menu__list__item"><a href="#sobre-mi">Sobre mi</a></li>
+                    <li class="menu__list__item"><a href="#skills">Skills</a></li>
+                    <li class="menu__list__item"><a href="#hobbies">Hobbies</a></li>
+                    <li class="menu__list__item"><a href="#formacion">Formación</a></li>
+                    <li class="menu__list__item"><a href="#xp">Proyectos</a></li>
+                    <li class="menu__list__item"><a href="#contacto" id="contacto">marianelacgam@gmail.com</a></li>
+                </ul>
+                <li class="menu__list__item__contato"><a href="#contacto">marianelacgam@gmail.com</a></li>
+            </nav>
+        </section>
     <section class="mensaje">
         <div class="mensaje__container">
-    <img src="assets/confetti.webp" class="msj__img">
-    <h1 class="mensaje__title">¡Mensaje enviado exitosamente!</h1>
+            <img src="assets/confetti.webp" class="msj__img">
+            <h1 class="mensaje__title">¡Mensaje enviado exitosamente!</h1>
 
-    <img src="assets/confetti.webp" class="msj__img-derecha">
+            <img src="assets/confetti.webp" class="msj__img-derecha">
     </div>
     <div class="boton">
-    <a href="index.html"><button type="submit" class="boton__inicio"> Volver </button></a></button>
+    <a href="index.html"><button type="submit" class="boton__inicio"> Volver a inicio</button></a></button>
     </div>
     </section>
 </body>
